force-app/main/default/objects/Test_Object__c/fields/Scratch2__c.field-meta.xml
<CustomField>
    <fullName>Scratch2__c</fullName>
    <label>Scratch23</label>
    <length>80</length>
    <type>Text</type>
</CustomField>