force-app/main/default/objects/Test_Object__c/fields/Scratch3__c.field-meta.xml
<CustomField>
    <fullName>Scratch3__c</fullName>
    <label>Scratch3test</label>
    <length>80</length>
    <type>Text</type>
</CustomField>