force-app/main/default/objects/Test_Object__c/fields/Scratch4__c.field-meta.xml
<CustomField>
    <fullName>Scratch4__c</fullName>
    <label>Scratch4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>