force-app/main/default/objects/Test_Object__c/fields/Scrtach1__c.field-meta.xml
<CustomField>
    <fullName>Scrtach1__c</fullName>
    <label>Scrtach1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>